--- a/extensions.json
+++ b/extensions.json
@@ -1,7 +1,7 @@
 {
       "imgSrc": "model-editor.svg",
       "requiredExtensions": [
-        "frontend"
+        "frontend_master"
       ],
       "incompatibleExtensions": []
 }
